--- a/src/app/Components/interface/interface.component.html
+++ b/src/app/Components/interface/interface.component.html
@@ -1,14 +1,10 @@
-<h1>All Rona Data</h1>
-
-<input type="text" #box>
-<button (click)="btnClick(box.value)">Enter</button>
-<p>{{typedValue}}</p>
-
+<h1>All Covid-19 Data</h1>
 
 <div class="total">
+
     <div class="card" *ngIf="check">
 
-        <h3>Country: {{typedValue}}</h3>
+        <h2>Country: Canada</h2>
 
         <div class="count">
 
@@ -27,11 +23,15 @@
 
 
         </div>
+
     </div>
 
-    <div class="err" *ngIf="!check">
-        <h3>{{errz}}</h3>
+
+    <div class="questionare">
+        <h1>Questions</h1>
     </div>
+
+
 
 </div>
 
@@ -39,36 +39,42 @@
 
     <h3 *ngIf="provData && check">Cases for each Province/State: </h3>
 
-    <div class="small-card" *ngFor="let area of provData">
+    <div class="small-card">
 
-        <h1>
-            {{area.provinceState}}
-        </h1>
+        <div class="inner-card" *ngFor="let area of provData">
+
+            <h1>
+                {{area.provinceState}}
+            </h1>
 
 
-        <div class="all-counts">
+            <div class="all-counts">
 
-            <div class="prov-confirmed">
-                <p><strong>Confirmed Cases</strong></p>
-                <p>{{area.confirmed}}</p>
+                <div class="prov-confirmed">
+                    <p><strong>Confirmed Cases</strong></p>
+                    <p>{{area.confirmed}}</p>
+                </div>
+
+                <div class="prov-recovered">
+                    <p><strong>Cases Recovered</strong></p>
+                    <p>{{area.recovered}}</p>
+                </div>
+
+                <div class="prov-deaths">
+                    <p><strong>Deaths</strong></p>
+                    <p>{{area.deaths}}</p>
+                </div>
+
+                <div class="prov-active">
+                    <p><strong>Active Cases</strong></p>
+                    <p>{{area.active}}</p>
+                </div>
             </div>
 
-            <div class="prov-recovered">
-                <p><strong>Cases Recovered</strong></p>
-                <p>{{area.recovered}}</p>
-            </div>
-
-            <div class="prov-deaths">
-                <p><strong>Deaths</strong></p>
-                <p>{{area.deaths}}</p>
-            </div>
-
-            <div class="prov-active">
-                <p><strong>Active Cases</strong></p>
-                <p>{{area.active}}</p>
-            </div>
         </div>
 
     </div>
-
 </div>
+
+
+<app-questions></app-questions>
