--- a/src/app/Components/interface/interface.component.scss
+++ b/src/app/Components/interface/interface.component.scss
@@ -7,6 +7,15 @@
     margin: 0 auto;
 }
 
+// Total Confirmed Cases around the world
+.total
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+
+// Each Card
 .card
 {
     text-align: center;
@@ -16,23 +25,25 @@
     {
         margin-top: 2em;
     }
-
-    // .count
-    // {
-    //     display: flex;
-    //     justify-content: space-evenly;
-    //     align-items: center;
-    //     text-align: center;
-    //     padding: 1em;
-    // }
-
 }
 
+// Cases inside each Province
 .all-counts
 {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 1em;
-    margin-bottom: 2.5em;
-    flex-wrap: wrap;
+//    display: grid;
+//    grid-template-columns: repeat(2, 1fr);
 }
+
+// Card for each province
+.small-card
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    .inner-card
+    {
+        padding: 1em;
+        margin: 1em;
+    }
+}
+
