colors added for provinces

--- a/src/app/Components/interface/interface.component.html
+++ b/src/app/Components/interface/interface.component.html
@@ -9,16 +9,16 @@
         <div class="count">
 
             <div class="total-confirmed">
-                <p><strong>Total Confirmed: </strong>{{ronaData.confirmed.value}}</p>
+                <p><strong>Confirmed: </strong>{{ronaData.confirmed.value}}</p>
             </div>
 
 
             <div class="total-recovered">
-                <p><strong>Total Recovered: </strong>{{ronaData.recovered.value}}</p>
+                <p><strong>Recovered: </strong>{{ronaData.recovered.value}}</p>
             </div>
 
             <div class="total-death">
-                <p><strong>Total Deaths: </strong>{{ronaData.deaths.value}}</p>
+                <p><strong>Deaths: </strong>{{ronaData.deaths.value}}</p>
             </div>
 
 
@@ -69,6 +69,7 @@
                     <p><strong>Active Cases</strong></p>
                     <p>{{area.active}}</p>
                 </div>
+
             </div>
 
         </div>
