--- a/src/app/Components/interface/interface.component.scss
+++ b/src/app/Components/interface/interface.component.scss
@@ -12,6 +12,17 @@
 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    .count
+    {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        > *
+        {
+            padding: 0.5em;
+        }
+    }
 }
 
 
@@ -21,29 +32,48 @@
     text-align: center;
     margin: 2em;
 
+    h2
+    {
+        margin-bottom: 0.5em;
+    }
+
     .bro
     {
         margin-top: 2em;
     }
 }
 
-// Cases inside each Province
-.all-counts
-{
-//    display: grid;
-//    grid-template-columns: repeat(2, 1fr);
-}
 
 // Card for each province
 .small-card
 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
+    
     .inner-card
     {
-        padding: 1em;
         margin: 1em;
+        background-color: #ddd;
+        border-radius: 1em;
+        padding: 1em;
+
+        h1
+        {
+            margin-bottom: 0.75em;
+        }
     }
 }
 
+
+// Cases inside each Province
+.all-counts
+{
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+> *
+{
+
+    margin-bottom: 1em;
+}
+
+}
