--- a/src/app/Components/charts/charts.component.html
+++ b/src/app/Components/charts/charts.component.html
@@ -1,7 +1,57 @@
 <div class="container">
 
-    <!-- This id given to this canvas -->
-    <!-- Will be name of chart in .ts file -->
+    <!-- <swiper> -->
+    <!-- <div class="swiper-wrapper"> -->
+
+    <!-- <div class="swiper-slide"> -->
     <canvas id="barChartz" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz2" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz3" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz4" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz5" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz6" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz7" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz8" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz9" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz10" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-slide"> -->
+    <canvas id="barChartz11" width="100" height="100"></canvas>
+    <!-- </div> -->
+
+    <!-- <div class="swiper-pagination"></div> -->
+
+    <!-- </div> -->
+    <!-- </swiper> -->
+
+
 
 </div>
