bullet points aligned

--- a/src/app/Components/charts/charts.component.html
+++ b/src/app/Components/charts/charts.component.html
@@ -1,52 +1,58 @@
-<!-- <div class="container"> -->
+<div class="container">
 
 
-<swiper [config]="config">
+    <swiper [config]="config">
 
-    <div class="swiper-wrapper">
-        <canvas class="swiper-slide" id="barChartz" width="100" height="100"></canvas>
-
-
-
-        <canvas class="swiper-slide" id="barChartz2" width="100" height="100"></canvas>
+        <div class="swiper-wrapper">
+            <canvas class="swiper-slide" id="barChartz" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz3" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz2" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz4" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz3" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz5" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz4" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz6" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz5" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz7" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz6" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz8" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz7" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz9" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz8" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz10" width="100" height="100"></canvas>
+            <canvas class="swiper-slide" id="barChartz9" width="100" height="100"></canvas>
 
 
 
-        <canvas class="swiper-slide" id="barChartz11" width="100" height="100"></canvas>
-    </div>
-</swiper>
+            <canvas class="swiper-slide" id="barChartz10" width="100" height="100"></canvas>
 
 
-<!-- </div> -->
+
+            <canvas class="swiper-slide" id="barChartz11" width="100" height="100"></canvas>
+        </div>
+
+        <div class="swiper-pagination"></div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+
+    </swiper>
+
+
+</div>
