--- a/src/app/Components/charts/charts.component.scss
+++ b/src/app/Components/charts/charts.component.scss
@@ -2,3 +2,16 @@ canvas
 {
     max-width: 500px;
 }
+
+.container
+{
+    margin-bottom: 50em;
+    padding-bottom: 5em;
+}
+
+.swiper-pagination-bullets
+{
+    bottom: 0px;
+    margin: 0 auto;
+    left: 60px;
+}
