--- a/src/app/Components/interface/interface.component.html
+++ b/src/app/Components/interface/interface.component.html
@@ -2,7 +2,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 
 <div class="data-container">
-    <h1>All Covid-19 Data</h1>
+    <h1>Covid-19 Data [Canada]</h1>
 
     <div class="total">
 
@@ -10,7 +10,7 @@
         <div class="card" *ngIf="check">
 
             <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Flag_of_Canada_%28Pantone%29.svg" alt=""
-                width="350px" style="margin-bottom: 1em;">
+                width="450px" style="margin-bottom: 1em;">
             <!-- <h2>Canada</h2> -->
 
             <div class="count">
