--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -2,7 +2,6 @@
 
     <div class="navbar bg-primary">
 
-        <!-- Text -->
         <h2>Corona Virus Data Analyzer</h2>
 
         <ul>
@@ -13,7 +12,13 @@
             <li>
                 <a href="">About Us</a>
             </li>
+
+            <li>
+                <a href="">Contact</a>
+            </li>
+
         </ul>
+
     </div>
 
 </div>
