--- a/src/app/Components/interface/interface.component.scss
+++ b/src/app/Components/interface/interface.component.scss
@@ -34,6 +34,12 @@
         {
             padding: 0.5em;
             margin: 0em 5em 0em 5em;
+
+         @media(max-width: 968px)
+        {
+            margin-bottom: 1em;
+        }
+
         }
 
         .total-confirmed
@@ -57,7 +63,6 @@
             border-radius: 1em;
             // color: white;
         }
-
     }
 }
 
