--- a/src/app/Components/charts/charts.component.scss
+++ b/src/app/Components/charts/charts.component.scss
@@ -1,6 +1,6 @@
 canvas
 {
-    max-width: 500px;
+    max-width: 400px;
 }
 
 .container
@@ -9,6 +9,11 @@ canvas
     padding-top: 5em;
     padding-bottom: 5em;
     background-color: lightblue;
+
+    .chartz
+    {
+        margin-top: -3em;
+    }
 }
 
 .swiper-pagination-bullets
@@ -24,4 +29,5 @@ h1
     font-weight: 100;
     font-size: 4em;
     margin-bottom: 1em;
+    margin-top: -0.5em;
 }
