added ontario assesment link

--- a/src/app/Components/interface/interface.component.html
+++ b/src/app/Components/interface/interface.component.html
@@ -30,7 +30,8 @@
 
 
             </div>
-
+            <br>
+            <button id="ontariolink"><a href="https://ca.thrive.health/covid19/en">Take this self-assessment survey</a></button>
         </div>
 
         <!-- 
