--- a/src/app/Components/interface/interface.component.scss
+++ b/src/app/Components/interface/interface.component.scss
@@ -93,6 +93,16 @@
     color: white;
 }
 
+#ontariolink{
+    margin-top: 3rem;
+    a{
+        font-size:25px;
+        text-decoration: none;
+        color:black;
+        padding:10px;
+    }
+}
+
 
 
 table {
