added recommended purchases

--- a/src/app/Components/interface/interface.component.html
+++ b/src/app/Components/interface/interface.component.html
@@ -33,14 +33,6 @@
             <br>
             <button id="ontariolink"><a href="https://ca.thrive.health/covid19/en">Take this self-assessment survey</a></button>
         </div>
-
-        <!-- 
-    <div class="questionare">
-        <h1>Questions</h1>
-    </div> -->
-
-
-
     </div>
 </div>
 
@@ -75,3 +67,19 @@
 
 
 <app-charts></app-charts>
+
+<h1 class="items">Recommended Purchases</h1>
+<div class="item-container">
+    <h2>Masks</h2>
+    <button id="ontariolink"><a href="https://www.amazon.ca/face-mask/s?k=face+mask">Buy Masks</a></button><br>
+    <span>When worn properly, a person wearing a non-medical mask or face covering can reduce the spread of his or her own infectious respiratory droplets.</span>
+    <h2>Gloves</h2>
+    <button id="ontariolink"><a href="https://www.amazon.ca/s?k=gloves+disposable+medical&crid=3UDV34BN15PSE&sprefix=gloves%2Caps%2C161&ref=nb_sb_ss_i_2_6">Buy Gloves</a></button><br>
+    <span>While not protecting you entirely from germs wearing gloves while using shopping carts, cleaning, or caring for other people is important to protect yourself</span>
+    <h2>Hand Sanitizer</h2>
+    <button id="ontariolink"><a href="https://www.amazon.ca/s?k=hand+sanitizers&crid=38JLRVQOYB14M&sprefix=Hand+Sa%2Caps%2C154&ref=nb_sb_ss_i_1_7">Buy Hand Sanitizer</a></button><br>
+    <span>Use Hand Sanitizer with at least 60% alchohol to be effective against the virus. In addition you should regularly wash your hands with soap for at least 20 seconds</span>
+    <h2>Disinfecting Wipes</h2>
+    <button id="ontariolink"><a href="https://www.amazon.ca/s?k=disinfectant+wipes&crid=6F25ICEXHZMN&sprefix=Disin%2Caps%2C156&ref=nb_sb_ss_i_1_5">Buy Disinfecting Wipes</a></button><br>
+    <span>Wiping surfaces with disinfecting wipes can clean the surface and remove the virus.</span>
+</div>
