--- a/src/app/Components/interface/interface.component.scss
+++ b/src/app/Components/interface/interface.component.scss
@@ -103,6 +103,16 @@
     }
 }
 
+.items{
+    margin: 1em 0em 1em 0em;
+}
+
+.item-container{
+    h2{
+        margin-top:2rem;
+    }
+}
+
 
 
 table {
