equipment added and styled

--- a/src/app/Components/interface/interface.component.html
+++ b/src/app/Components/interface/interface.component.html
@@ -27,11 +27,13 @@
                 <div class="total-death">
                     <p><strong>Deaths: </strong>{{ronaData.deaths.value}}</p>
                 </div>
-
-
             </div>
-            <br>
-            <button id="ontariolink"><a href="https://ca.thrive.health/covid19/en">Take this self-assessment survey</a></button>
+
+
+            <button id="ontariolink"><a href="https://ca.thrive.health/covid19/en" target="_blank">Take this
+                    self-assessment
+                    survey</a></button>
+
         </div>
     </div>
 </div>
@@ -68,7 +70,9 @@
 
 <app-charts></app-charts>
 
-<h1 class="items">Recommended Purchases</h1>
+<app-equipment></app-equipment>
+
+<!-- <h1 class="items">Recommended Purchases</h1>
 <div class="item-container">
     <h2>Masks</h2>
     <button id="ontariolink"><a href="https://www.amazon.ca/face-mask/s?k=face+mask">Buy Masks</a></button><br>
@@ -82,4 +86,4 @@
     <h2>Disinfecting Wipes</h2>
     <button id="ontariolink"><a href="https://www.amazon.ca/s?k=disinfectant+wipes&crid=6F25ICEXHZMN&sprefix=Disin%2Caps%2C156&ref=nb_sb_ss_i_1_5">Buy Disinfecting Wipes</a></button><br>
     <span>Wiping surfaces with disinfecting wipes can clean the surface and remove the virus.</span>
-</div>
+</div> -->
