--- a/src/app/Components/equipment/equipment.component.scss
+++ b/src/app/Components/equipment/equipment.component.scss
@@ -18,6 +18,10 @@
 
 .items{
     margin: 1em 0em 1em 0em;
+    font-weight: 100;
+    font-size: 3em;
+    margin-bottom: 1em;
+    margin-top: 0.5em;
 }
 
 .item-container{
