--- a/src/app/Components/equipment/equipment.component.html
+++ b/src/app/Components/equipment/equipment.component.html
@@ -3,78 +3,57 @@
 
     <div class="all-equipment">
 
-        <div class="card">
 
-            <div class="equipment-1">
-                <div class="front-card">
-                    <h2>Masks</h2>
-                    <p>When worn properly, a person wearing a non-medical mask or face covering can reduce the spread of
-                        his
-                        or
-                        her
-                        own infectious respiratory droplets.</p>
-                    <button id="ontariolink"><a href="https://www.amazon.ca/face-mask/s?k=face+mask" target="_blank">Buy
-                            Masks</a></button>
-                </div>
 
-                <div class="back-card">
-                    <h1>yo</h1>
-                </div>
-            </div>
+        <div class="equipment-1">
+            <h2>Masks</h2>
+            <p>When worn properly, a person wearing a non-medical mask or face covering can reduce the spread of
+                his
+                or
+                her
+                own infectious respiratory droplets.</p>
+            <button id="ontariolink"><a href="https://www.amazon.ca/face-mask/s?k=face+mask" target="_blank">Buy
+                    Masks</a></button>
         </div>
 
 
-        <div class="card">
-            <div class="equipment-2">
-                <div class="front-card">
-                    <h2>Gloves</h2>
-                    <p>While not protecting you entirely from germs wearing gloves while using shopping carts, cleaning,
-                        or
-                        caring
-                        for other people is important to protect yourself</p>
-                    <button id="ontariolink"><a
-                            href="https://www.amazon.ca/s?k=gloves+disposable+medical&crid=3UDV34BN15PSE&sprefix=gloves%2Caps%2C161&ref=nb_sb_ss_i_2_6"
-                            target="_blank">Buy
-                            Gloves</a></button>
-                </div>
-                <div class="back-card">
-                    <h1>yo</h1>
-                </div>
-            </div>
+
+        <div class="equipment-2">
+            <h2>Gloves</h2>
+            <p>While not protecting you entirely from germs, wearing gloves while using shopping carts, cleaning,
+                or
+                caring
+                for other people is important to protect yourself.</p>
+            <button id="ontariolink"><a
+                    href="https://www.amazon.ca/s?k=gloves+disposable+medical&crid=3UDV34BN15PSE&sprefix=gloves%2Caps%2C161&ref=nb_sb_ss_i_2_6"
+                    target="_blank">Buy
+                    Gloves</a></button>
         </div>
 
 
-        <div class="card">
-            <div class="equipment-3">
-                <div class="front-card">
-                    <h2>Hand Sanitizer</h2>
-                    <p>Use Hand Sanitizer with at least 60% alchohol to be effective against the virus.</p>
-                    <button id="ontariolink"><a
-                            href="https://www.amazon.ca/s?k=hand+sanitizers&crid=38JLRVQOYB14M&sprefix=Hand+Sa%2Caps%2C154&ref=nb_sb_ss_i_1_7"
-                            target="_blank">Buy
-                            Hand Sanitizer</a></button>
-                </div>
 
-                <div class="back-card">
-                    bruh
-                </div>
-            </div>
+
+        <div class="equipment-3">
+
+            <h2>Hand Sanitizer</h2>
+            <p>Use Hand Sanitizer with at least 60% alchohol to be effective against the virus.</p>
+            <button id="ontariolink"><a
+                    href="https://www.amazon.ca/s?k=hand+sanitizers&crid=38JLRVQOYB14M&sprefix=Hand+Sa%2Caps%2C154&ref=nb_sb_ss_i_1_7"
+                    target="_blank">Buy
+                    Hand Sanitizer</a></button>
         </div>
 
-        <div class="card">
-            <div class="equipment-4">
-                <div class="front-card">
-                    <h2>Disinfecting Wipes</h2>
-                    <p>Wiping surfaces with disinfecting wipes can clean the surface and remove the virus.</p>
-                    <button id="ontariolink"><a
-                            href="https://www.amazon.ca/s?k=disinfectant+wipes&crid=6F25ICEXHZMN&sprefix=Disin%2Caps%2C156&ref=nb_sb_ss_i_1_5"
-                            target="_blank">Buy
-                            Disinfecting Wipes</a></button>
-                </div>
-                <div class="back-card">
-                    yo
-                </div>
-            </div>
+
+
+        <div class="equipment-4">
+
+            <h2>Disinfecting Wipes</h2>
+            <p>Wiping surfaces with disinfecting wipes can clean the surface and remove the virus.</p>
+            <button id="ontariolink"><a
+                    href="https://www.amazon.ca/s?k=disinfectant+wipes&crid=6F25ICEXHZMN&sprefix=Disin%2Caps%2C156&ref=nb_sb_ss_i_1_5"
+                    target="_blank">Buy
+                    Disinfecting Wipes</a></button>
         </div>
+
     </div>
 </div>
