--- a/src/app/Components/charts/charts.component.scss
+++ b/src/app/Components/charts/charts.component.scss
@@ -24,10 +24,11 @@ canvas
     top: 481px;
 }
 
-h1
+h1, h2
 {
     font-weight: 100;
-    font-size: 4em;
-    margin-bottom: 1em;
+    font-size: 3em;
+    margin-bottom: 0.5em;
     margin-top: -0.5em;
 }
+
