--- a/src/app/Components/chatbot/chatbot.component.html
+++ b/src/app/Components/chatbot/chatbot.component.html
@@ -16,4 +16,12 @@
     </div>
 
 
+    <div class="note">
+        <p><strong>NOTE:</strong> When asking questions, please make sure the spelling and grammar is clear. Also, try
+            your best to ask
+            questions that start with "why" or "how", etc.</p>
+
+        <p>For example, "what is covid-19?" or "do i have covid-19?"</p>
+    </div>
+
 </div>
