--- a/src/app/Components/chatbot/chatbot.component.scss
+++ b/src/app/Components/chatbot/chatbot.component.scss
@@ -28,3 +28,11 @@ i
     font-size: 4em;
     margin-bottom: 0.5em;
 }
+
+.note
+{
+    max-width: 80%;
+    margin: 3em auto 0em auto;
+    border: 2px solid red;
+    background-color: lightpink;
+}
