--- a/src/app/Components/equipment/equipment.component.scss
+++ b/src/app/Components/equipment/equipment.component.scss
@@ -27,6 +27,14 @@
     }
 }
 
+h1
+{
+    font-weight: 100;
+    font-size: 3em;
+    margin-bottom: 0.5em;
+    margin-top: -0.5em;
+}
+
 .all-equipment
 {
     display: grid;
